add_subdirectory(OldVersion)
add_subdirectory(OldVersionIgnore)

cmmm(VERSION "${CMMM_LATEST_VERSION}" GIT_REPOSITORY "flagarde/CMakeMM" DESTINATION "CMakeMM" ALWAYS_DOWNLOAD)
add_subdirectory(Default)
add_subdirectory(Filename)
add_subdirectory(Folder)
add_subdirectory(FolderFilename)
add_subdirectory(BranchDefault)
add_subdirectory(BranchFilename)
add_subdirectory(BranchFolder)
add_subdirectory(BranchFolderFilename)
